<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hepi Music</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_Channel_name">Hepi Music Channel</string>
    <string name="notification_Channel_Description">Shows the currently playing music</string>
    <string name="exo_controls_shuffle_on_description" tools:ignore="PrivateResource">Disable shuffle mode</string>
    <string name="exo_controls_shuffle_off_description" tools:ignore="PrivateResource">Enable shuffle mode</string>
    <string name="notification_content_title">Hepi Music Player</string>
    <string name="notification_content_text">Hepi Music Playback</string>
    <string name="current_playlist_name">Current playlist</string>
    <string name="open_player_content_description">Click to view your play list</string>
    <string name="added_media_item_format">Added %1$s to playlist</string>
    <string name="shuffle">Shuffle</string>
    <string name="skip">skip</string>
    <string name="got_it">Got It</string>
    <string name="next">Next</string>
    <string name="onboarding_screen">OnBoarding Screen</string>
    <string name="board_title_1">Entertainment Redefined</string>
    <string name="board_description_1">Enjoy the vibe with seamless Kenyan content streaming only on Hepi Music.</string>
    <string name="board_title_2">Listen</string>
    <string name="board_description_2">Discover where people are going, and join the fun wagon.</string>
    <string name="board_title_3">Hepi Music</string>
    <string name="board_description_3">Live, Love, Listen.</string>
    <string name="on_boarding_image">On-boarding image</string>
    <string name="app_icon">App Icon</string>
    <string name="get_started">Get Started</string>
    <string name="image_of_navigation_item">Image of Navigation item</string>
    <string name="navigation_icon">Navigation icon</string>
    <string name="track_album_art">Track album art</string>
    <string name="playlist_image">Playlist image</string>
    <string name="artist_avatar">Artist avatar</string>
    <string name="album_art">Album art</string>
    <string name="genre_art">Genre art</string>
    <string name="more_options">More options</string>
    <string name="go_back">Go back</string>
    <string name="shuffle_playlist">Shuffle playlist</string>
    <string name="repeat_playlist">Repeat playlist</string>
    <string name="play_and_pause_button">Play and pause button</string>
    <string name="pause_button">Pause button</string>
    <string name="play_button">Play button</string>
    <string name="next_button">Next Button</string>
    <string name="previous_button">Previous button</string>
    <string name="current_playing_tracks">Current playing tracks</string>
    <string name="man_holding_an_empty_box">Man holding an empty box</string>
    <string name="add_new">Add New</string>
    <string name="add_new_playlist">Add New Playlist</string>
    <string name="skip_to_next">Skip to next song</string>
    <string name="skip_to_previous">Skip to previous song</string>
    <string name="play_song">Play song</string>
    <string name="pause_song">Pause song</string>
    <string name="explore">Explore</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="playlist">Playlist</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="nav_dialog_info">You can sort it as you want</string>
    <string name="identify_music">Identify Music</string>
    <string name="artists">Artists</string>
    <string name="favourites">Favourites</string>
    <string name="genres">Genres</string>
    <string name="radio">Radio</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="videos">Videos</string>
    <string name="filter_results">Filter results</string>
    <plurals name="numberOfSongs">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <plurals name="numberOfCreators">
        <item quantity="one">%d artist</item>
        <item quantity="other">%d artists</item>
    </plurals>
    <plurals name="numberOfSongsInAlbum">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <plurals name="numberOfSongsSelected">
        <item quantity="one">%d song selected</item>
        <item quantity="other">%d songs selected</item>
        <item quantity="zero">No songs selected</item>
    </plurals>
    <plurals name="numberOfPlaylistsSelected">
        <item quantity="one">%d playlist selected</item>
        <item quantity="other">%d playlist selected</item>
        <item quantity="zero">No playlist selected</item>
    </plurals>
    <plurals name="numberOfAlbums">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <plurals name="numberOfCategories">
        <item quantity="one">%d category</item>
        <item quantity="other">%d categories</item>
    </plurals>
    <plurals name="numberOfPlaylists">
        <item quantity="one">%d playlist</item>
        <item quantity="other">%d playlists</item>
    </plurals>
    <plurals name="numberOfStreams">
        <item quantity="one">%d stream</item>
        <item quantity="other">%d streams</item>
    </plurals>
    <string name="read_storage_permission_info">We need to be authorized to access the media files on your device.</string>
    <string name="read_storage_permission_settings">Storage permission can be enabled under Settings > Apps > %s > Permission.</string>
    <string name="location_permission_settings">Location permission can be enabled under Settings > Apps > %s > Permission.</string>
    <string name="goToAppInfo">Go to App Info</string>
    <string name="recentlyPlayed">Recently Played</string>
    <string name="empty_playlist">You have not played any song yet</string>
    <string name="play">Play</string>
    <string name="back">Back</string>
    <string name="two_comma_separated_values">%s, %s</string>
    <string name="min">\u0020 minute</string>
    <string name="mins">\u0020 minutes</string>
    <string name="sec">\u0020 second</string>
    <string name="secs">\u0020 seconds</string>
    <string name="hour">\u0020 hour</string>
    <string name="hours">\u0020 hours</string>
    <string name="comma">,\u0020</string>
    <string name="now_playing">Now Playing</string>
    <string name="lyrics">Lyrics</string>
    <string name="finding_lyrics">Finding Lyrics</string>
    <string name="share">Share</string>
    <string name="play_next">Play next</string>
    <string name="favourite">Favourite</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="delete_frm_library">Delete from library</string>
    <string name="no_playlist">No playlist here to see</string>
    <string name="add_playlist_suggestion">How about we start by adding a some songs to your playlist?</string>
    <string name="create_a_playlist">Create a playlist</string>
    <string name="create_playlist">Create playlist</string>
    <string name="create_playlist_thumb_text">Click here to change image</string>
    <string name="upload_playlist_image">Upload a picture as your playlist identity</string>
    <string name="playlist_name">Playlist name</string>
    <string name="playlist_empty_message">Playlist cannot be empty</string>
    <string name="playlist_empty_thumb_message">Change playlist name or select an image</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="edit_songs">Edit songs</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="save_changes">Save Changes</string>
    <string name="playlist_delete_message">Do you want to permanently delete \"%1$s\"?</string>
    <string name="no_thanks">No thanks</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="sth_deleted">\"%1$s\" deleted</string>
    <string name="sth_went_wrong">Oops! Something went wrong</string>
    <string name="done">Done</string>
    <string name="select_songs">Select Songs</string>
    <string name="song_in_album">%1$s in %2$s</string>
    <string name="remove_picture">Remove picture</string>
    <string name="success">Success</string>
    <string name="notification_channel">Now Playing</string>
    <string name="notification_channel_description">Shows what music is currently playing in Hepi Music Player</string>
    <string name="playing_now">Playing Now</string>
    <string name="search_hint">Search title, album, artist, genre or playlist</string>
    <string name="no_results">No results found for \"%s\"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummyLyrics">No Lyrics</string>
    <string name="dummyLyricsSource">No Lyrics Source</string>
    <string name="home">Home</string>
    <string name="playlists">PlayLists</string>
    <string name="saved">saved</string>
    <string name="blur_image_view">Blur Image View</string>
    <string name="custom_message">%s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="phone_hint">Phone (+254 700 000 000)</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="already_registered_login">Already registered? Login</string>
    <string name="logout">Logout</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="click_here_to_resend_verification_link">Click here to resend verification link</string>
    <string name="go_back_to_sign_up_click_here">Go back to sign up? Click here</string>
    <string name="google_login_button">Google Login Button</string>
    <string name="upvote_button">Upvote Button</string>
    <string name="trending_on_hepi_music">Trending On Hepi Music</string>
    <string name="stream_icon">stream icon</string>
    <string name="reaction">Reaction</string>
    <string name="edit_profile_button">edit profile button</string>
    <string name="view_more_button">view more button</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="profile_picture_upload">Upload your profile picture</string>
    <string name="display_name">Display name</string>
    <string name="email_field">Email</string>
    <string name="phone_number_input">Phone Number (+254 7xx xxx xxx)</string>
    <string name="update_profile">Update Profile</string>
    <string name="profile_empty_message">Profile cannot be empty</string>
    <string name="profile_empty_thumb_message">Change Profile details or select image</string>
    <string name="profile_saved">Profile saved succesfully</string>
    <string name="profile_save_error">Error occured while saving profile</string>
    <string name="user_avator">user avator</string>
    <string name="about_hepi">Hepi Music is a Kenyan music streaming plartform specifically designed to promote Kenyan content and content creators. Visit https://hepimusic.com/about to learn more.</string>
    <string name="song_saved">New Song added succesfully</string>
    <string name="album_saved">New album added successfully</string>
    <string name="category_saved">New category added successfully</string>
    <string name="songs_admin">Add Songs</string>
    <string name="albums_admin">Add Albums</string>
    <string name="categories_admin">Add Categories</string>
    <string name="creators_admin">Edit Your Creator Profile</string>
</resources>