<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playback.PlaybackFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/container" >

        <TextView
            android:id="@+id/sectionTitle"
            style="@style/Theme.HepiMusic.SectionTitle"
            android:text="@string/explore"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/navigationIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/navigationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Theme.HepiMusic.SectionIcon"
            android:contentDescription="@string/navigation_icon"
            app:layout_constraintBottom_toBottomOf="@id/sectionTitle"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toRightOf="@+id/sectionTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sectionTitle"
            app:srcCompat="@drawable/ic_nav" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/randomAlbumsRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sectionTitle"
            tools:listitem="@layout/item_album"
            tools:itemCount="2" />

        <TextView
            android:id="@+id/recentlyPlayed"
            style="@style/Theme.HepiMusic.SectionTitle"
            android:text="@string/recentlyPlayed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/randomAlbumsRV" />

        <TextView
            android:id="@+id/emptyPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_xx_large"
            android:text="@string/empty_playlist"
            android:textAlignment="center"
            android:visibility="invisible"
            tools:visibility="visible"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentlyPlayed" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:indeterminateDrawable="@drawable/progress"
            app:layout_constraintBottom_toBottomOf="@+id/emptyPlaylist"
            app:layout_constraintEnd_toEndOf="@+id/emptyPlaylist"
            app:layout_constraintStart_toStartOf="@+id/emptyPlaylist"
            app:layout_constraintTop_toTopOf="@+id/emptyPlaylist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playedRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recentlyPlayed"
            tools:listitem="@layout/item_recently"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>