<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="15dp"
    tools:context=".auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hepi Music Login"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:fontFamily="@font/poppins_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/colorPrimary"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_x_large"
            android:paddingBottom="@dimen/padding_medium"
            app:hintAnimationEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:background="@drawable/edit_text_background"
            android:textColor="@color/colorPrimary"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_x_large"
            android:paddingTop="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_x_large"
            android:paddingBottom="@dimen/padding_medium"
            app:hintAnimationEnabled="false"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameField" />

        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_x_large"
            android:enabled="false"
            android:paddingTop="@dimen/button_padding"
            android:paddingBottom="18dp"
            android:text="@string/log_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordField" />

        <ProgressBar
            android:id="@+id/loginSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/loginButton"
            app:layout_constraintBottom_toBottomOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="@id/loginButton"
            app:layout_constraintEnd_toEndOf="@id/loginButton"
            android:visibility="gone" />

        <TextView
            android:id="@+id/joinLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/don_t_have_an_account_register"
            android:textColor="@color/white"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton" />

        <ImageButton
            android:id="@+id/googleLogin"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/login_with_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/joinLink"
            android:contentDescription="@string/google_login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>